.kubernetes/templates/minio/5.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: '%NAMESPACE%'
  name: %NAMESPACE%-minio-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '3600'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '3600'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '3600'
    nginx.ingress.kubernetes.io/proxy-body-size: '50m'
spec:
  rules:
    - host: files.%RUCKEN_DOMAIN%
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: %NAMESPACE%-minio
                port:
                  number: 9000
  tls:
    - hosts:
        - files.%RUCKEN_DOMAIN%
      secretName: %NAMESPACE%-minio-tls
